Fix for horizontal scroll always visible

--- a/src/table/table.scss
+++ b/src/table/table.scss
@@ -123,7 +123,7 @@
 }
 
 @mixin iui-table-body {
-  overflow: scroll;
+  overflow-y: scroll;
   overflow: overlay;
   display: flex;
   flex-direction: column;
